--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
     "xlsx": "^0.18.5"
   },
   "scripts": {
-    "start": "node --max-old-space-size=12288 node_modules/react-scripts/scripts/start.js",
+    "start": "react-scripts start",
     "build": "react-scripts build"
   },
   "proxy": "http://localhost:5000",
